--- a/Grupo_L-war/src/main/webapp/resources/css/ListadoAlumnos.css
+++ b/Grupo_L-war/src/main/webapp/resources/css/ListadoAlumnos.css
@@ -28,13 +28,7 @@
 	margin-bottom: 25px;
 }
 
-.page{
-	flex: 1 0 auto;
-    display: flex;
-    flex-direction: column;
-}
-
-.colIzquierda {
+.izquierda {
 	padding-top: 20px;
 	padding-right: 15px;
 	padding-bottom: 20px;
@@ -48,7 +42,7 @@
     float: left;
 }
 
-.colDerecha {
+.centro {
 	padding-top: 20px;
 	padding-right: 15px;
 	padding-bottom: 20px;
@@ -58,8 +52,8 @@
 	margin-right: 50px;
 	margin-left: 100 px;
 	border-radius: 10px;
-	float:right;
-    max-width: 70%;
+	float:left;
+	width: 1000px;
 }
 
 .cerrar {
