--- a/Grupo_L-war/src/main/webapp/resources/css/Estilos.css
+++ b/Grupo_L-war/src/main/webapp/resources/css/Estilos.css
@@ -11,3 +11,13 @@
 	border-radius: 10px;
 	width: 1000px;
 }
+
+.hola{
+	padding: 5px;
+	background-color: #F7F0F0;
+	border: 3px solid black;
+	float: left;
+	margin-left: 25px;
+	margin-top: 25px;
+	border-radius: 10px;
+}
