--- a/Grupo_L-war/src/main/webapp/resources/css/Estilos.css
+++ b/Grupo_L-war/src/main/webapp/resources/css/Estilos.css
@@ -12,3 +12,19 @@
 	width: 1000px;
 }
 
+.centrado.card{
+	padding-top: 20px;
+	padding-right: 15px;
+	padding-bottom: 20px;
+	padding-left: 15px;
+	background-color: #F7F0F0;
+	border: 3px solid black;
+	margin-top:30px;
+	margin-right: auto;
+	margin-left: auto;
+	border-radius: 10px;
+	width: 1000px;
+}
+
+
+
